welcome.lessons.welcome.array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  var n  = num.length
  var niv=0
  var haut=num(0)
  def nbIle(): Int={
    
    }
  return niv
}